--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@types/react-transition-group": "^4.2.4",
+        "@types/react-transition-group": "^4.4.5",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-router": "^6.10.0",
         "react-router-dom": "^5.1.2",
-        "reactstrap": "^8.4.1"
+        "reactstrap": "^8.10.1"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
         "babel-loader": "^8.1.0",
